--- a/gradle-jdks-settings/build.gradle
+++ b/gradle-jdks-settings/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'com.palantir.external-publish-jar'
 apply plugin: 'com.palantir.external-publish-gradle-plugin'
 
 dependencies {
-    // DO NOT ADD implementation/api dependencies here. We need to avoid overlapping dependencies between the
+    // DO NOT ADD directly implementation/api dependencies here. We need to avoid overlapping dependencies between the
     // settings classLoader and the build classLoaders.
 }
 
