--- a/settings.gradle
+++ b/settings.gradle
@@ -7,4 +7,5 @@ include 'gradle-jdks-setup'
 include 'gradle-jdks-setup-common'
 include 'idea-plugin'
 include 'gradle-jdks-settings'
+include 'gradle-jdks-groovy'
 
