--- a/gradle-jdks-distributions/build.gradle
+++ b/gradle-jdks-distributions/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'java'
 apply plugin: 'com.palantir.external-publish-jar'
+apply plugin: 'com.palantir.shadow-jar'
 
 dependencies {
     api project(':gradle-jdks-setup-common')
