--- a/build.gradle
+++ b/build.gradle
@@ -54,3 +54,5 @@ allprojects {
     apply plugin: 'com.palantir.java-format'
     apply plugin: 'com.palantir.jakarta-package-alignment'
 }
+
+checkUnusedConstraints.enabled = false
