--- a/idea-plugin/build.gradle
+++ b/idea-plugin/build.gradle
@@ -37,7 +37,8 @@ tasks.named("publish") {
 
 dependencies {
     implementation project(':gradle-jdks-setup-common')
-
+    implementation project(':gradle-jdks-enablement')
+    
     testImplementation 'org.assertj:assertj-core'
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
