--- a/build.gradle
+++ b/build.gradle
@@ -13,11 +13,17 @@ buildscript {
         classpath 'com.palantir.gradle.externalpublish:gradle-external-publish-plugin:1.15.0'
         classpath 'com.palantir.javaformat:gradle-palantir-java-format:2.47.0'
         classpath 'com.palantir.gradle.consistentversions:gradle-consistent-versions:2.23.0'
+        classpath 'com.palantir.gradle.shadow-jar:gradle-shadow-jar:2.8.0'
         classpath 'com.palantir.baseline:gradle-baseline-java:5.61.0'
         classpath 'com.palantir.gradle.gitversion:gradle-git-version:3.1.0'
         classpath 'gradle.plugin.org.inferred:gradle-processors:3.7.0'
         classpath 'com.gradle.publish:plugin-publish-plugin:1.2.1'
     }
+}
+
+plugins {
+    id "org.jetbrains.intellij" version "1.17.3" apply false
+    id 'org.jetbrains.gradle.plugin.idea-ext' version "1.1.1"
 }
 
 apply plugin: 'com.palantir.external-publish'
@@ -48,3 +54,7 @@ allprojects {
     apply plugin: 'com.palantir.java-format'
     apply plugin: 'com.palantir.jakarta-package-alignment'
 }
+
+// workaround for:
+// `Error during resolution of the dependency graph of configuration configuration ':gradle-jdks-settings:unshadedCopy'`
+checkUnusedConstraints.enabled = false
