--- a/gradle-jdks/build.gradle
+++ b/gradle-jdks/build.gradle
@@ -14,10 +14,13 @@ dependencies {
     api project(':gradle-jdks-distributions')
     api project(':gradle-jdks-json')
     api project(':gradle-jdks-setup')
+    api project(':gradle-jdks-groovy')
+    api project(':gradle-jdks-enablement')
 
     implementation('com.palantir.baseline:gradle-baseline-java') {
         exclude group: 'com.diffplug.spotless', module: 'spotless-plugin-gradle'
     }
+    implementation 'com.palantir.gradle.failure-reports:gradle-failure-reports-exceptions'
     implementation 'com.palantir.gradle.utils:lazily-configured-mapping'
     implementation 'com.google.guava:guava'
     implementation 'commons-io:commons-io'
@@ -30,6 +33,7 @@ dependencies {
     annotationProcessor 'org.immutables:value'
 
     testImplementation gradleTestKit()
+    testImplementation project(':gradle-jdks-settings')
     testImplementation 'com.netflix.nebula:nebula-test'
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testImplementation 'org.assertj:assertj-core'
@@ -44,21 +48,26 @@ gradlePlugin {
             displayName = 'Palantir JDK Auto-provisioning Plugin'
             description = 'Auto-provisions specific versions of JDKs'
             implementationClass = 'com.palantir.gradle.jdks.JdksPlugin'
+            tags.addAll("java", "jdks")
+        }
+        jdksIdea {
+            id = 'com.palantir.jdks.idea'
+            displayName = 'Palantir Gradle JDK Configuring IDEA'
+            description = 'Plugin for configuring the IDEA Gradle JDK setup'
+            implementationClass = 'com.palantir.gradle.jdks.PalantirGradleJdksIdeaPlugin'
+            tags.addAll("java", "jdks", "idea")
         }
         palantirCa {
             id = 'com.palantir.jdks.palantir-ca'
             displayName = 'Palantir CA for gradle-jdks'
             description = 'Includes the Palantir CA from the system truststore'
             implementationClass = 'com.palantir.gradle.jdks.PalantirCaPlugin'
+            tags.addAll("java", "jdks", "palantir ca")
         }
     }
-}
-
-pluginBundle {
     website = 'https://github.com/palantir/gradle-jdks'
     vcsUrl = 'https://github.com/palantir/gradle-jdks'
     description = 'Download specific JDKs versions automatically'
-    tags = ['java', 'jdks']
 }
 
 tasks.withType(JavaCompile).configureEach {
@@ -68,5 +77,12 @@ tasks.withType(JavaCompile).configureEach {
 
 tasks.test {
     environment("PROJECT_VERSION", project.version)
-    dependsOn ':gradle-jdks-setup:fatJar'
+    systemProperty 'ignoreDeprecations', 'true'
+    dependsOn project(':gradle-jdks-settings').tasks.named('build')
+}
+
+tasks.withType(ProcessResources.class).configureEach {
+    from(project(':gradle-jdks-setup').tasks.named('fatJar')) {
+        rename { 'gradle-jdks-setup.jar' }
+    }
 }
