--- a/versions.props
+++ b/versions.props
@@ -12,6 +12,7 @@ commons-io:commons-io = 2.16.1
 org.apache.commons:commons-compress = 1.26.2
 com.palantir.gradle.auto-parallelizable:* = 1.4.0
 org.ow2.asm:asm = 9.7
+com.palantir.gradle.failure-reports:* = 1.9.0
 
 # dependency-upgrader:OFF
 com.palantir.baseline:* = 5.53.0
