--- a/changelog/@unreleased/pr-376.v2.yml
+++ b/changelog/@unreleased/pr-376.v2.yml
@@ -1,5 +1,5 @@
-type: improvement
-improvement:
+type: fix
+fix:
   description: Bump intellij dependency
   links:
   - https://github.com/palantir/gradle-jdks/pull/376
