--- a/gradle-jdks-excavator-configurations/build.gradle
+++ b/gradle-jdks-excavator-configurations/build.gradle
@@ -4,4 +4,8 @@ apply plugin: 'com.palantir.external-publish-jar'
 
 dependencies {
     implementation project(':gradle-jdks')
+
+    testImplementation project(':gradle-jdks-setup-common')
+    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'org.assertj:assertj-core'
 }
