settings plugin runs gradle jdk setup & add test

--- a/gradle-jdks/build.gradle
+++ b/gradle-jdks/build.gradle
@@ -76,7 +76,8 @@ tasks.withType(JavaCompile).configureEach {
 }
 
 tasks.test {
-    environment("PROJECT_VERSION", project.version)
+    environment(Map.of("PROJECT_VERSION", project.version, "HOME", "/tmp"))
+    systemProperty 'user.home', '/tmp'
     systemProperty 'ignoreDeprecations', 'true'
     dependsOn project(':gradle-jdks-settings').tasks.named('build')
 }
