cleanup & fix test deps

--- a/gradle-jdks-settings/build.gradle
+++ b/gradle-jdks-settings/build.gradle
@@ -50,8 +50,10 @@ publishing.publications {
     }
 }
 
-tasks.test {
-    environment(Map.of("HOME", "/tmp"))
+// Changing the location where the gradle jdks are installed such that the settings plugin can run the
+// gradle-jdks-setup.sh configuration script to install the missing jdks.
+tasks.withType(Test) {
+    environment("HOME", "/tmp")
     systemProperty 'user.home', '/tmp'
 }
 
