[Gradle JDK] Fix when `palantir-gradle-jdks` is not installed and jdks are missing (#382)
[Gradle JDK] Fix when `palantir-gradle-jdks` is not installed and jdks are missing

--- a/gradle-jdks-settings/build.gradle
+++ b/gradle-jdks-settings/build.gradle
@@ -9,6 +9,11 @@ dependencies {
     // settings classLoader and the build classLoaders.
     shadeTransitively project(':gradle-jdks-setup-common')
     shadeTransitively project(':gradle-jdks-enablement')
+
+    testImplementation gradleTestKit()
+    testImplementation 'com.netflix.nebula:nebula-test'
+    testImplementation 'org.apache.commons:commons-compress'
+    testImplementation project(':gradle-jdks-test-common')
 }
 
 gradlePlugin {
@@ -44,3 +49,11 @@ publishing.publications {
         }
     }
 }
+
+// Changing the location where the gradle jdks are installed such that the settings plugin can run the
+// gradle-jdks-setup.sh configuration script to install the missing jdks.
+tasks.withType(Test) {
+    environment("HOME", "/tmp/gradleJdksSettingsTest")
+    systemProperty 'user.home', '/tmp/gradleJdksSettingsTest'
+}
+
