--- a/gradle-jdks-excavator-configurations/build.gradle
+++ b/gradle-jdks-excavator-configurations/build.gradle
@@ -9,3 +9,9 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testImplementation 'org.assertj:assertj-core'
 }
+
+tasks.withType(ProcessResources.class).configureEach {
+    from(project(':gradle-jdks-setup').tasks.named('fatJar')) {
+        rename { 'gradle-jdks-setup.jar' }
+    }
+}
