allow for min version to be updated

--- a/gradle-jdks-groovy/build.gradle
+++ b/gradle-jdks-groovy/build.gradle
@@ -1,3 +1,10 @@
 apply plugin: 'java-gradle-plugin'
 apply plugin: 'groovy'
 apply plugin: 'com.palantir.external-publish-jar'
+
+
+dependencies {
+    testImplementation gradleTestKit()
+    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'org.assertj:assertj-core'
+}
