--- a/idea-plugin/src/main/resources/META-INF/plugin.xml
+++ b/idea-plugin/src/main/resources/META-INF/plugin.xml
@@ -12,5 +12,8 @@
 
   <extensions defaultExtensionNs="com.intellij">
     <externalSystemTaskNotificationListener implementation="com.palantir.gradle.jdks.GradleJdksExternalSystemTaskNotificationListener"/>
+      <notificationGroup id="Gradle JDK setup Notifications"
+                         displayType="BALLOON"
+                         key="notification.group.gradleJdkSetup"/>
   </extensions>
 </idea-plugin>
