--- a/idea-plugin/src/main/resources/META-INF/plugin.xml
+++ b/idea-plugin/src/main/resources/META-INF/plugin.xml
@@ -15,5 +15,7 @@
       <notificationGroup id="Gradle JDK setup Notifications"
                          displayType="BALLOON"
                          key="notification.group.gradleJdkSetup"/>
+    <toolWindow id="Gradle JDK Setup" anchor="bottom" icon="/icons/GradleJDKSetupIcon.png"
+                factoryClass="com.palantir.gradle.jdks.GradleJdkToolWindowFactory"/>
   </extensions>
 </idea-plugin>
