--- a/idea-plugin/build.gradle
+++ b/idea-plugin/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     implementation project(':gradle-jdks-setup-common')
     implementation project(':gradle-jdks-enablement')
 
+    implementation 'com.github.ben-manes.caffeine:caffeine'
     testImplementation 'org.assertj:assertj-core'
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
