--- a/gradle-jdks-setup/build.gradle
+++ b/gradle-jdks-setup/build.gradle
@@ -42,7 +42,7 @@ tasks.integrationTest {
     dependsOn tasks.fatJar
 }
 
-tasks.build.dependsOn tasks.fatJar
+tasks.build.dependsOn tasks.fatJar, tasks.integrationTest
 
 // DO NOT UPDATE! This needs to be kept as low as possible, such that it is compatible with all the jdk versions the
 // consumers would want to set up with the JDK auto-management workflow (used by ./gradle-jdks-setup.sh and GradleWrapperMain.java classes)
